# LO21-Splendor

./: .gitignore  Bank.h  Board.cpp  Board.h  BuyCard.cpp  BuyCard.h  CMakeLists.txt  Cities_of_Splendor_components.xlsx  LO21-Splendor.sln  LO21-Vue.pro  NobleCard.h  PlantUML Web Server 2.webarchive  PlantUML Web Server.webarchive  Player.h  Projet LO21.docx  Rapport-LO21-2.odt  ReadMe.md  ReservCard.cpp  ReservCard.h  ResourceCard.h  Take_2_identical_Token.cpp  Take_2_identical_Token.h  Take_3_diff_Token.cpp  Take_3_diff_Token.h  UML_final.txt  action.cpp  compile.md  compte_rendu.aux  compte_rendu.tex  compte_rendu.toc  controller.h  data.qrc  icons.qrc  install.md  main.cpp  splendor.h  uml.txt  uml_4vtoma.txt  vueboard.h  vuecard.h  (+8 more)
data/: cities.xml  nobles.xml  resources.xml
projetLO21/: Bank.cpp  BaseCard.h  Board.h  CMakeLists.txt  Controller.cpp  Controller.h  Player.h  ResourceCard.h  action.h
src/: Bank.cpp  Bank.h  BaseCard.cpp  BaseCard.h  Board.cpp  Board.h  Card.cpp  Card.h  CitiesCard.cpp  CitiesGame.cpp  CitiesPlayer.cpp  CitiesQtModel.cpp  Controller.h  Deck.cpp  Deck.h  DrawPile.cpp  DrawPile.h  Hand.cpp  Hand.h  NobleCard.cpp  NobleCard.h  PlantUML Web Server.webarchive  Player.cpp  Player.h  PlayerExtStronghold.cpp  PlayerExtStrongholds.cpp  ResourceCard.cpp  ResourceCard.h  ResourceCardStronghold.cpp  Splendor.h  StrongHoldGame.cpp  StrongHoldQtController.cpp  StrongHoldQtModel.cpp  View.cpp  View.h  action.h  basecard.cpp  basecard.h  board.cpp  board.h  (+16 more)
view/: splendor.h  viewboard.cpp  viewboard.h  viewbonus.cpp  viewcard.cpp  viewcard.h  (+16 more)
(+44 files in other folders)
