cmake_minimum_required(VERSION 3.17)
project(projetLO21)

set(CMAKE_CXX_STANDARD 14)

add_executable(projetLO21 main.cpp action.cpp action.h Take_2_identical_Token.cpp Take_2_identical_Token.h Take_3_diff_Token.cpp Take_3_diff_Token.h BuyCard.cpp BuyCard.h ReservCard.cpp ReservCard.h splendor.h BaseCard.h Bank.cpp Bank.h Board.cpp Board.h Player.h NobleCard.h ResourceCard.h)